// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: "foo: >+\\n  x\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x

=====================================output=====================================
foo: >+
  x

================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x


=====================================output=====================================
foo: >+
  x


================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x

...
=====================================output=====================================
foo: >+
  x

...
================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x



=====================================output=====================================
foo: >+
  x



================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x


...
=====================================output=====================================
foo: >+
  x


...
================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x




=====================================output=====================================
foo: >+
  x




================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x



...
=====================================output=====================================
foo: >+
  x



...
================================================================================
`;

exports[`snippet: "foo: >+\\n  x\\n\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+
  x




...
=====================================output=====================================
foo: >+
  x




...
================================================================================
`;

exports[`snippet: "foo: >+\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+

=====================================output=====================================
foo: >+
================================================================================
`;

exports[`snippet: "foo: >+\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+


=====================================output=====================================
foo: >+


================================================================================
`;

exports[`snippet: "foo: >+\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+

...
=====================================output=====================================
foo: >+

...
================================================================================
`;

exports[`snippet: "foo: >+\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+



=====================================output=====================================
foo: >+



================================================================================
`;

exports[`snippet: "foo: >+\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+


...
=====================================output=====================================
foo: >+


...
================================================================================
`;

exports[`snippet: "foo: >+\\n\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+




=====================================output=====================================
foo: >+




================================================================================
`;

exports[`snippet: "foo: >+\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+



...
=====================================output=====================================
foo: >+



...
================================================================================
`;

exports[`snippet: "foo: >+\\n\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >+




...
=====================================output=====================================
foo: >+




...
================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x

=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x


=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x

...
=====================================output=====================================
foo: >
  x
...

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x



=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x


...
=====================================output=====================================
foo: >
  x
...

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x




=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x



...
=====================================output=====================================
foo: >
  x
...

================================================================================
`;

exports[`snippet: "foo: >\\n  x\\n\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x




...
=====================================output=====================================
foo: >
  x
...

================================================================================
`;

exports[`snippet: "foo: >\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >

=====================================output=====================================
foo: >

================================================================================
`;

exports[`snippet: "foo: >\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >


=====================================output=====================================
foo: >

================================================================================
`;

exports[`snippet: "foo: >\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >

...
=====================================output=====================================
foo: >
...

================================================================================
`;

exports[`snippet: "foo: >\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >



=====================================output=====================================
foo: >

================================================================================
`;

exports[`snippet: "foo: >\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >


...
=====================================output=====================================
foo: >
...

================================================================================
`;

exports[`snippet: "foo: >\\n\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >




=====================================output=====================================
foo: >

================================================================================
`;

exports[`snippet: "foo: >\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >



...
=====================================output=====================================
foo: >
...

================================================================================
`;

exports[`snippet: "foo: >\\n\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >




...
=====================================output=====================================
foo: >
...

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x

=====================================output=====================================
foo: >-
  x

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x


=====================================output=====================================
foo: >-
  x

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x

...
=====================================output=====================================
foo: >-
  x
...

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x



=====================================output=====================================
foo: >-
  x

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x


...
=====================================output=====================================
foo: >-
  x
...

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x




=====================================output=====================================
foo: >-
  x

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x



...
=====================================output=====================================
foo: >-
  x
...

================================================================================
`;

exports[`snippet: "foo: >-\\n  x\\n\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-
  x




...
=====================================output=====================================
foo: >-
  x
...

================================================================================
`;

exports[`snippet: "foo: >-\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-

=====================================output=====================================
foo: >-

================================================================================
`;

exports[`snippet: "foo: >-\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-


=====================================output=====================================
foo: >-

================================================================================
`;

exports[`snippet: "foo: >-\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-

...
=====================================output=====================================
foo: >-
...

================================================================================
`;

exports[`snippet: "foo: >-\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-



=====================================output=====================================
foo: >-

================================================================================
`;

exports[`snippet: "foo: >-\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-


...
=====================================output=====================================
foo: >-
...

================================================================================
`;

exports[`snippet: "foo: >-\\n\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-




=====================================output=====================================
foo: >-

================================================================================
`;

exports[`snippet: "foo: >-\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-



...
=====================================output=====================================
foo: >-
...

================================================================================
`;

exports[`snippet: "foo: >-\\n\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >-




...
=====================================output=====================================
foo: >-
...

================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x

=====================================output=====================================
foo: |+
  x

================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x


=====================================output=====================================
foo: |+
  x


================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x

...
=====================================output=====================================
foo: |+
  x

...
================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x



=====================================output=====================================
foo: |+
  x



================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x


...
=====================================output=====================================
foo: |+
  x


...
================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x




=====================================output=====================================
foo: |+
  x




================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x



...
=====================================output=====================================
foo: |+
  x



...
================================================================================
`;

exports[`snippet: "foo: |+\\n  x\\n\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+
  x




...
=====================================output=====================================
foo: |+
  x




...
================================================================================
`;

exports[`snippet: "foo: |+\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+

=====================================output=====================================
foo: |+
================================================================================
`;

exports[`snippet: "foo: |+\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+


=====================================output=====================================
foo: |+


================================================================================
`;

exports[`snippet: "foo: |+\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+

...
=====================================output=====================================
foo: |+

...
================================================================================
`;

exports[`snippet: "foo: |+\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+



=====================================output=====================================
foo: |+



================================================================================
`;

exports[`snippet: "foo: |+\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+


...
=====================================output=====================================
foo: |+


...
================================================================================
`;

exports[`snippet: "foo: |+\\n\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+




=====================================output=====================================
foo: |+




================================================================================
`;

exports[`snippet: "foo: |+\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+



...
=====================================output=====================================
foo: |+



...
================================================================================
`;

exports[`snippet: "foo: |+\\n\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |+




...
=====================================output=====================================
foo: |+




...
================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x

=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x


=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x

...
=====================================output=====================================
foo: |
  x
...

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x



=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x


...
=====================================output=====================================
foo: |
  x
...

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x




=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x



...
=====================================output=====================================
foo: |
  x
...

================================================================================
`;

exports[`snippet: "foo: |\\n  x\\n\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x




...
=====================================output=====================================
foo: |
  x
...

================================================================================
`;

exports[`snippet: "foo: |\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |

=====================================output=====================================
foo: |

================================================================================
`;

exports[`snippet: "foo: |\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |


=====================================output=====================================
foo: |

================================================================================
`;

exports[`snippet: "foo: |\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |

...
=====================================output=====================================
foo: |
...

================================================================================
`;

exports[`snippet: "foo: |\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |



=====================================output=====================================
foo: |

================================================================================
`;

exports[`snippet: "foo: |\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |


...
=====================================output=====================================
foo: |
...

================================================================================
`;

exports[`snippet: "foo: |\\n\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |




=====================================output=====================================
foo: |

================================================================================
`;

exports[`snippet: "foo: |\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |



...
=====================================output=====================================
foo: |
...

================================================================================
`;

exports[`snippet: "foo: |\\n\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |




...
=====================================output=====================================
foo: |
...

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x

=====================================output=====================================
foo: |-
  x

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x


=====================================output=====================================
foo: |-
  x

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x

...
=====================================output=====================================
foo: |-
  x
...

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x



=====================================output=====================================
foo: |-
  x

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x


...
=====================================output=====================================
foo: |-
  x
...

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x




=====================================output=====================================
foo: |-
  x

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x



...
=====================================output=====================================
foo: |-
  x
...

================================================================================
`;

exports[`snippet: "foo: |-\\n  x\\n\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-
  x




...
=====================================output=====================================
foo: |-
  x
...

================================================================================
`;

exports[`snippet: "foo: |-\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-

=====================================output=====================================
foo: |-

================================================================================
`;

exports[`snippet: "foo: |-\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-


=====================================output=====================================
foo: |-

================================================================================
`;

exports[`snippet: "foo: |-\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-

...
=====================================output=====================================
foo: |-
...

================================================================================
`;

exports[`snippet: "foo: |-\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-



=====================================output=====================================
foo: |-

================================================================================
`;

exports[`snippet: "foo: |-\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-


...
=====================================output=====================================
foo: |-
...

================================================================================
`;

exports[`snippet: "foo: |-\\n\\n\\n\\n" format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-




=====================================output=====================================
foo: |-

================================================================================
`;

exports[`snippet: "foo: |-\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-



...
=====================================output=====================================
foo: |-
...

================================================================================
`;

exports[`snippet: "foo: |-\\n\\n\\n\\n\\n..." format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |-




...
=====================================output=====================================
foo: |-
...

================================================================================
`;
